feat: link paginas

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
     <h1>&#x1F352;Conceitos básicos de Git & Github</h1>
     <ul>
-        <li>Como fazer commit e push?</li>
-        <li>Como resolver conflitos?</li>
-        <li>Como fazer um clone do seu repositório<li>
-        <li></li>
+        <li><a href="paginas_my-git/como-fazer-commit.html">Como fazer commit e push?</a> </li>
+        <li><a href="README.md">Como resolver conflitos?</a> </li>
+        <li><a href="paginas_my-git/como-fazer-clone.html">Como fazer um clone do seu repositório?</a></li>
+    
     </ul>
     <p></p>
     
