alterando index na feat 4

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     <main>
         <section class="secao-introducao">
             <h1>Repositório de Estudos sobre Git & GitHub (˶ᵔ ᵕ ᵔ˶) </h1>
-            <p>Oie! Este é meu repositório para centralizar meus estudos sobre os principais comandos e conceitos de versionamento de código ☆</p>
+            <p>Oie! Seja bem vindo ao meu repositório para centralizar meus estudos sobre os principais comandos e conceitos de versionamento de código ☆</p>
         </section>
 
         <section class="secao-comandos">
-            <h2> 𐙚 Lista de Comandos Essenciais</h2>
+            <h2> 𐙚 Lista de Comandos Essenciais! </h2>
             <ul>
                 <li><mark>git init</mark>: <u>Inicializa um repositório </u>vazio</li>
                 <li><mark>git add</mark>: <u>Adiciona arquivos ao índice</u> (staging area)</li>
@@ -47,7 +47,7 @@
         </section>
 
         <section class="secao-conceitos">
-            <h2>𐙚 Conceitos Básicos</h2>
+            <h2>𐙚 Conceitos Básicos! /h2>
             <ul>
                 <li><a href="paginas_my-git/como-fazer-commit.html">Como fazer commit e push?</a></li>
                 <li><a href="paginas_my-git/como-resolver-conflitos.html">Como resolver conflitos?</a></li>
